# cmake-superproject-example

./: .gitmodules  CMakeLists.txt  README.md
doc/: uml-sequence-diagram.puml
src/: CMakeLists.txt
src/task-scheduler/: CMakeLists.txt  scheduled-team-implementation.f90  scheduled-team-interface.f90  scheduled-team-mod.f90  scheduled-team-submod.f90  task-mod.f90  task-submod.f90
src/tests/: CMakeLists.txt
src/tests/dependency-tree/: CMakeLists.txt  test-dependency-tree.f90
src/tests/independent-tasks/: CMakeLists.txt  async-hello-multistep.f90  test-independent-tasks.f90
src/tests/json-input/: CMakeLists.txt  input.json  test-json-input.f90
src/tests/nested-objects/: CMakeLists.txt  nested-objects.json  test-nested-objects.f90
src/tests/ordered-compute/: CMakeLists.txt  test-ordered-compute.f90
src/tests/uml-sequence/: test-task-scheduler.f90
